--- a/client/src/Components/Hero/Hero.scss
+++ b/client/src/Components/Hero/Hero.scss
@@ -1,6 +1,6 @@
 .hero {
     &__image {
-        height: 70vh;
+        height: 50vh;
         object-fit: cover;
         width: 100%;
         background-position: center;
@@ -22,8 +22,9 @@
     }
     &__text {
         color: black;
-        font-size: 3rem;
-        color: black;
+        font-size: 1.5rem;
+        color: white;
+        font-weight: bold;
         position: absolute;
         bottom: 5px;
         right: 2rem;
