add UserPropertyList, UserPropertyDetails page

--- a/client/src/Components/PropertiesList/PropertiesList.scss
+++ b/client/src/Components/PropertiesList/PropertiesList.scss
@@ -8,6 +8,12 @@
     &__container {
         @include flex-row;
         flex-wrap: wrap;
+        // &--NA {
+        //     justify-content: center;
+        // }
+    }
+    &__subHeading {
+        text-align: center;
     }
 }
 
