--- a/client/src/Styles/components/_input.scss
+++ b/client/src/Styles/components/_input.scss
@@ -24,9 +24,19 @@
         color: black;
         // opacity: 0.5;
         padding-bottom: 0.5rem;
+        &--image {
+            // margin-bottom: 1rem;
+            margin-right: 1rem;
+        }
     }
     &--register {
         width: 100%;
+    }
+    &--image {
+        width: 100%;
+        height: 1.5rem;
+        // margin-bottom: 0.5rem;
+        box-sizing: border-box;
     }
     &--error {
         border: 1px solid red;
