--- a/client/src/Components/LeftBar/LeftBar.scss
+++ b/client/src/Components/LeftBar/LeftBar.scss
@@ -2,9 +2,21 @@
     padding-top: 2rem;
     &__item {
         height: 2rem;
-        border-bottom: 1px solid rgb(235, 232, 232);
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 0.5rem;
+        border-bottom: 2px solid rgb(235, 232, 232);
+        &:hover {
+            font-weight: bold;
+        }
     }
     &__link {
         color: black;
+    }
+    &__userHeading {
+        padding-left: 1rem;
+        padding-top: 2rem;
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid rgb(235, 232, 232);
     }
 }
