--- a/client/src/Components/PropertyDetails/PropertyDetails.scss
+++ b/client/src/Components/PropertyDetails/PropertyDetails.scss
@@ -1,4 +1,8 @@
 .propertyDetails {
+    &__property {
+        display: flex;
+        flex-direction: column;
+    }
     &__heading {
         text-align: center;
         margin-bottom: 1rem;
@@ -11,5 +15,8 @@
         width: 100%;
         height: 60vh;
         object-fit: cover;
+    }
+    &__userButtons {
+        align-self: flex-end;
     }
 }
