fix validation in login/registration, edit create-profile validation

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -5,3 +5,5 @@
 @import './Styles/components/button.scss';
 @import './Styles/components/input.scss';
 @import './Styles/components/link_list.scss';
+@import './Styles/components/radio.scss';
+@import './Styles/components/select.scss';
