--- a/client/src/Styles/components/_input.scss
+++ b/client/src/Styles/components/_input.scss
@@ -28,6 +28,9 @@
             // margin-bottom: 1rem;
             margin-right: 1rem;
         }
+        &--radio {
+            padding-bottom: 0px;
+        }
     }
     &--register {
         width: 100%;
