--- a/client/src/Styles/components/_select.scss
+++ b/client/src/Styles/components/_select.scss
@@ -3,14 +3,14 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    background-image: url("../../assets/icons/arrow_down.svg");
-    background-repeat: no-repeat;
-    $a: 100%;
-    $b: 1rem;
-    background-position-x: calc(#{$a} - #{$b});
-    background-position-y: center;
-    &:active {
-        border-radius: 10px;
+    border-radius: 2px;
+    height: 1.5rem;
+    width: 10rem;
+    padding-left: 1rem;
+    margin-left: 1rem;
+    &:active,
+    &:focus {
+        border-radius: 2px;
     }
     &::-ms-expand {
         display: none;
