--- a/client/src/Components/Associates/AssociateList.scss
+++ b/client/src/Components/Associates/AssociateList.scss
@@ -1,9 +1,14 @@
 @import '../../Styles/abstracts/mixins.scss';
 @import '../../Styles/abstracts/variables.scss';
 .associateList {
-    padding-left: 1rem;
+    @include flex-column;
+    width: 80%;
+    padding-left: 6rem;
+    align-items: flex-start;
+    justify-content: flex-start;
     &__heading {
         // text-align: center;
+        padding-left: 5rem;
         margin-bottom: 1.5rem;
     }
 }
@@ -12,9 +17,10 @@
     @include flex-row;
     justify-content: space-around;
     box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.2);
-    width: 40%;
+    width: 20rem;
     margin-bottom: 2rem;
     padding: 1rem;
+    padding-top: 1.25rem;
     &__profilePic {
         height: 5rem;
         width: 5rem;
@@ -23,19 +29,15 @@
         border-radius: 50%;
     }
     &__info {
-        padding-left: 2rem;
-    }
-    &__detailsLink {
-        display: block;
-        float: right;
-        width: 5rem;
-        margin-top: 1rem;
+        width: 60%;
+        @include flex-column;
+        align-items: flex-end;
     }
 }
 
 .associateDetails {
     @include flex-row;
-    justify-content: flex-start;
+    justify-content: space-between;
     box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.2);
     width: 35vw;
     margin-bottom: 2rem;
@@ -48,16 +50,12 @@
         border-radius: 50%;
     }
     &__info {
-        padding-left: 4rem;
+        padding-right: 0.5rem;
+        @include flex-column;
+        align-items: flex-end;
     }
     &__referee {
         margin-top: 1rem;
         margin-bottom: 0.5rem;
-    }
-    &__link {
-        display: block;
-        float: right;
-        width: 10rem;
-        margin-top: 1.5rem;
     }
 }
