--- a/client/src/Components/PropertyDetails/PropertyDetails.scss
+++ b/client/src/Components/PropertyDetails/PropertyDetails.scss
@@ -2,10 +2,17 @@
     &__property {
         display: flex;
         flex-direction: column;
+        padding-top: 1rem;
     }
     &__heading {
         text-align: center;
         margin-bottom: 1rem;
+    }
+    &__subHeading {
+        margin-bottom: 0.5rem;
+    }
+    &__des {
+        margin-bottom: 0.5rem;
     }
     &__price {
         text-align: center;
