--- a/client/src/Styles/components/_button.scss
+++ b/client/src/Styles/components/_button.scss
@@ -11,6 +11,9 @@
     justify-content: center;
     border-radius: 4px;
     font-size: 1rem;
+    width: fit-content;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     &:hover {
         cursor: pointer;
         background-color: $color-button-hover;
@@ -25,6 +28,9 @@
     }
     &--propList {
         width: 40%;
+    }
+    &--alignEnd {
+        align-self: flex-end;
     }
     &--associate {
         margin-top: 1rem;
@@ -55,6 +61,11 @@
     }
     &--propertyDetails {
         width: 16vw;
+        margin-bottom: 1rem;
+    }
+    &--editProfile {
+        align-self: flex-end;
+        margin-right: 2rem;
         margin-bottom: 1rem;
     }
 }
