add modal in property details screen to send message

--- a/client/src/Components/AddUpdateProperty/AddProperty.scss
+++ b/client/src/Components/AddUpdateProperty/AddProperty.scss
@@ -41,6 +41,7 @@
     &__imgGroup {
         display: flex;
         flex-direction: row;
+        flex-wrap: wrap;
         margin-bottom: 0.5rem;
     }
     &__img {
