--- a/client/src/Styles/components/_input.scss
+++ b/client/src/Styles/components/_input.scss
@@ -41,6 +41,9 @@
         // margin-bottom: 0.5rem;
         box-sizing: border-box;
     }
+    &--message {
+        height: 2rem;
+    }
     &--error {
         border: 1px solid red;
         &:active,
