add modal for message in associate-details page

--- a/client/src/Components/Associates/AssociateList.scss
+++ b/client/src/Components/Associates/AssociateList.scss
@@ -42,6 +42,7 @@
     width: 35vw;
     margin-bottom: 2rem;
     padding: 2rem;
+    position: relative;
     &__profilePic {
         height: 10rem;
         width: 10rem;
