--- a/client/src/Components/Message/Message.scss
+++ b/client/src/Components/Message/Message.scss
@@ -12,6 +12,14 @@
     padding-bottom: 1rem;
     background-color: white;
     border-radius: 4px;
+    &--seller {
+        top: 45%;
+        right: -10%;
+    }
+    &--associate {
+        top: -50%;
+        right: -50%;
+    }
     &__closeButtonDiv {
         position: relative;
         width: 100%;
