--- a/client/src/Components/Profile/Profile.scss
+++ b/client/src/Components/Profile/Profile.scss
@@ -2,7 +2,7 @@
 @import '../../Styles/abstracts/mixins.scss';
 .profile {
     @include flex-column;
-    width: 45%;
+    width: 42%;
     padding-left: 5rem;
     align-items: flex-start;
     justify-content: flex-start;
@@ -16,17 +16,17 @@
         padding-top: 1rem;
         @include h2-sub-header;
         &--center {
-            padding-left: 5rem;
+            padding-left: 3.5rem;
         }
     }
     &__infoSection {
         @include flex-column;
         width: 100%;
-        padding-left: 4rem;
+        padding-left: 1.5rem;
         align-items: flex-start;
         justify-content: flex-start;
         box-shadow: 1px 1px 1px 2px rgba(0, 0, 0, 0.2);
-        padding-top: 1.5rem;
+        padding-top: 1rem;
         padding-bottom: 1rem;
     }
     &__subHeading {
@@ -42,7 +42,7 @@
         margin-top: 0.5rem;
     }
     &__referenceInfo {
-        padding-bottom: 1.5rem;
+        padding-bottom: .5rem;
     }
     &__heading--ref {
         padding-top: 0.75rem;
