--- a/client/src/Components/Home/Home.scss
+++ b/client/src/Components/Home/Home.scss
@@ -1,8 +1,20 @@
 @import '../../Styles/abstracts/mixins.scss';
 .home {
+    width: 60vw;
+    &__text {
+        font-size: 1.1rem;
+        margin-top: 0.25rem;
+        margin-bottom: 0.25rem;
+    }
     &__heading {
         @include h1-page-header;
-        text-align: center;
         margin-bottom: 1.5rem;
+        padding-left: 14rem
     }
+}
+
+.logo {
+    opacity: 0.7;
+    margin-right: 0.5rem;
+    margin-bottom: -0.3rem;
 }
