fix styles in properties and profile pages

--- a/client/src/Components/AddUpdateProperty/AddProperty.scss
+++ b/client/src/Components/AddUpdateProperty/AddProperty.scss
@@ -19,6 +19,7 @@
     }
     &__formSubmitted {
         @include flex-column;
+        width: 75%;
         padding-top: 1rem;
         &--status {
             align-items: center;
