--- a/client/src/Components/PropertiesList/PropertiesList.scss
+++ b/client/src/Components/PropertiesList/PropertiesList.scss
@@ -1,16 +1,21 @@
 @import '../../Styles/abstracts/mixins.scss';
 .properties {
+    @include flex-column;
+    align-items: flex-start;
     &__heading {
         @include h1-page-header;
-        text-align: center;
         margin-bottom: 1.5rem;
+        margin-left: 1rem;
+        &--status {
+            @include h2-sub-header;
+            margin-top: 2rem;
+            width: 60%;
+        }
     }
     &__container {
         @include flex-row;
+        justify-content: flex-start;
         flex-wrap: wrap;
-        // &--NA {
-        //     justify-content: center;
-        // }
     }
     &__subHeading {
         text-align: center;
@@ -20,7 +25,6 @@
 .property {
     width: 38%;
     margin-left: 3.5%;
-    // margin-right: 5%;
     padding: 1.5rem;
     border: 1px solid rgb(235, 232, 232);
     margin-bottom: 1.5rem;
@@ -28,7 +32,6 @@
     &:hover {
         // cursor: pointer;
         box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-        ;
     }
     &__img {
         width: 100%;
