--- a/client/src/Styles/components/_button.scss
+++ b/client/src/Styles/components/_button.scss
@@ -67,6 +67,7 @@
         align-self: flex-end;
         margin-right: 1.5rem;
         margin-bottom: 0.5rem;
+        margin-top: 1rem;
     }
     &--msgCancel {
         background-color: white;
@@ -79,5 +80,11 @@
     &--message-send {
         margin-top: 0.5rem;
         align-self: flex-end;
+    }
+    &--status {
+        width: fit-content;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        margin-bottom: 1rem;
     }
 }
